<resources>
    <string name="app_name">Harry Potter</string>
    <string name="login">LOGIN</string>
    <string name="emaill">EMAIL</string>
    <string name="senha">SENHA</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="cadastro">Ainda não possui uma conta?</string>
    <string name="palpite">PALPITE</string>
    <string name="salvar">SALVAR</string>
    <string name="jatem">Já possui uma conta?</string>
    <string name="revelar">REVELAR</string>
    <string name="cadastre">CRIE SUA CONTA</string>
    <string name="nome">NOME</string>
    <string name="jacad">Já tem cadastro? Faça login.</string>
    <string name="usuario">USUÁRIO</string>
    <string name="confsenha">CONFIRME SUA SENHA</string>
    <string name="deslogar">DESLOGAR</string>
    <string name="deslogdesc">Para deslogar, confirme seu usuário e senha.</string>
    <string name="save">SALVAR</string>
    <string name="entrar">ENTRAR</string>
    <string name="casa">ESCOLHA SUA CASA</string>
    <string name="bemvindo">BEM-VINDO</string>
    <string name="heminone">HERMIONE</string>
    <string name="snape">SNAPE</string>
    <string name="harry">HARRY</string>
    <string name="fre">FRED E GEORG</string>
    <string name="minerva">MINERVA</string>
    <string name="sirius">SIRIUS</string>
    <string name="yt">VEJA OS TRAILERS</string>
    <string name="elenco">CONHEÇA O ELENCO</string>
    <string name="contato">ENTRE EM CONTATO</string>
    <string name="feitico">FEITIÇOS</string>
    <string name="avada">AVADA KEDAVRA</string>
    <string name="trevas">Arte das Trevas</string>
    <string name="mata">Mata os Oponentes</string>
    <string name="alo">ALOHOMORA ABELHARUS</string>
    <string name="normal">Normal</string>
    <string name="abre">Abre Portas não trancadas por mágia</string>
    <string name="lumos">LUMOS MAXIMA</string>
    <string name="ponta">Ascende a ponta da varinha</string>
    <string name="ex">EXPELLIARMUS</string>
    <string name="desarma">Desarma o oponente</string>
    <string name="pers">Personagens que Utilizam esta Habilidade</string>
    <string name="habili">ATIVAR HABILIDADE</string>

    <string name="luzoquee">Lumos Máxima é uma das variações do feitiço lumos. Quando uma pessoa usa esse feitiço a ponta da varinha ascende, mas com uma luz que pega uma área maior e mais forte do que o lumos normal. Para você apagar a luz da ponta de sua varinha basta dizer Nox.</string>
    <string name="criado">Criado por:</string>
    <string name="Violeta">Violeta Stilch</string>

    <string name="escolha">DEFINA UM WALLPAPER</string>
    <string name="king">KINGSLEY</string>
    <string name="dum">DUMBLEDORE</string>
    <string name="ernie">ERNIE MECMILLAN</string>
    <string name="cho">CHO CHANG</string>
    <string name="patrono">Patrono de Alguns Personagens</string>
    <string name="simas">SIMAS FINNIGAN</string>

    <!-- Activity / Teste patrono -->
    <string name="no1">Extrovertida</string>
    <string name="yes1">Introvertida</string>
    <string name="no2">Transfiguração</string>
    <string name="yes2">Astronomia</string>
    <string name="no3">Gato</string>
    <string name="yes3">Cachorro</string>
    <string name="btnTeste">Descubra</string>
    <string name="chNavegador" />
    <string name="TituloTeste">Descubra seu Patrono</string>
    <string name="Pergunta1">Você é uma pessoa:</string>
    <string name="Pergunta2">Escolha uma matéria:</string>
    <string name="Pergunta3">Qual seu animal preferido?</string>

    <!-- Activity / Wallpaper -->
    <string name="btnWall">Definir como Wallpaper</string>

</resources>