<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TELA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="537dp"
        android:layout_height="835dp"
        android:layout_marginTop="-380dp"
        android:layout_marginBottom="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398"
        app:srcCompat="@drawable/cimasplashnovo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="590dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnFind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013"
        app:srcCompat="@drawable/painel" />

    <RadioGroup
        android:id="@+id/rdgrp1"
        android:layout_width="148dp"
        android:layout_height="128dp"
        android:layout_marginTop="28dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPergunta1">

        <RadioButton
            android:id="@+id/btnNo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/no1" />

        <RadioButton
            android:id="@+id/btnYes1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:button="@android:color/transparent"
            android:checked="true"
            android:color="@color/black"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/yes1"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rdgrp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPergunta2">

        <RadioButton
            android:id="@+id/btnYes2"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:checked="true"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/yes2"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/btnNo2"
            android:layout_width="160dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/no2"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rdgrp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPergunta3">

        <RadioButton
            android:id="@+id/btnYes3"
            android:layout_width="match_parent"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/yes3" />

        <RadioButton
            android:id="@+id/btnNo3"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:layout_height="wrap_content"
            android:text="@string/no3" />
    </RadioGroup>

    <Button
        android:id="@+id/btnFind"
        style="@style/BOTAO"
        android:layout_width="144dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:onClick="answerQuiz"
        android:text="@string/btnTeste"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdgrp3" />

    <TextView
        android:id="@+id/txtPergunta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/Pergunta1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloTeste" />

    <TextView
        android:id="@+id/txtPergunta2"
        android:layout_width="165dp"
        android:layout_height="73dp"
        android:layout_marginTop="648dp"
        android:text="@string/Pergunta2"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txtPergunta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/Pergunta3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdgrp2" />

    <TextView
        android:id="@+id/txtTituloTeste"
        android:layout_width="234dp"
        android:layout_height="90dp"
        android:fontFamily="@font/poppins"
        android:text="@string/TituloTeste"
        android:textAlignment="center"
        android:textColor="#4C4949"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="152dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dementador" />


</androidx.constraintlayout.widget.ConstraintLayout>